recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: identifier expected but ';' found.
  var x: Double=100.;
                    ^